Bug 1362493 - Let users with mpc=true addons into the multi experiment. r=Felipe

MozReview-Commit-ID: CwV4vukwrm9